figured out words not showing up issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ body{
   border: 4px solid black;
   border-radius: 20px;
   padding: 10px;
+  font-size: 20px;
 }
 /*/////////////////////*/
 
@@ -67,6 +68,12 @@ body{
   margin-bottom: 40px;
   font-size: 0px;
 }
+#mobile{
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-size: 0px;
+}
+
 #mainPic{
   margin-top: 40px;
   min-width: 200px;
@@ -78,6 +85,13 @@ body{
   min-width: 100px;
   width: 20%;
   border-radius: 100%;
+}
+
+#mainChanger{
+  /*font-size: 20px;*/
+}
+#mobileChanger{
+  /*font-size: 20px;*/
 }
 /*////////////////////////*/
 
